Fix grid align on scss

--- a/css/main.scss
+++ b/css/main.scss
@@ -50,12 +50,9 @@ i{
     display: grid;
     grid-template-columns: 70% 30%;
     grid-template-rows: auto auto;
-    grid-template-areas:
-        "lang toggle"
-        "main sidebar"
-    ;
+    grid-template-areas: "lang toggle" "main sidebar";
     justify-items: center;
-    align-items: center;
+    align-items: flex-start;
 }
 .lang {
     grid-area: lang;   
@@ -168,6 +165,7 @@ i{
         "tech"
     ;
     padding-left: 1.5em;
+    padding-top: 1.5em;
 }
 
 .contact {
